[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/actors/turrets/turret.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 46.2737

[node name="Test_turret" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.264866, -0.132435 )
scale = Vector2( 0.106078, 0.097801 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 100, 0 )

[node name="Sprite" type="Sprite" parent="RayCast2D"]
position = Vector2( 32, 0 )
rotation = -1.57079
scale = Vector2( 0.0331917, 0.993799 )
texture = ExtResource( 1 )

[node name="turret_cooldown" type="Timer" parent="."]

[node name="OnOff" type="CheckButton" parent="."]
margin_left = 13.6759
margin_top = -19.0273
margin_right = 89.6759
margin_bottom = 20.9727
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="turret_cooldown" to="." method="_on_turret_cooldown_timeout"]
[connection signal="toggled" from="OnOff" to="." method="_on_CheckButton_toggled"]
